<resources>
    <string name="app_name">UchatTut</string>
    <string name="nav_title_conversation">Диалоги</string>
    <string name="nav_title_library">Библиотека</string>
    <string name="nav_title_schedule">Календарь</string>
    <string name="nav_title_tasks">Задачи</string>
    <string name="nav_title_profile">Профиль</string>
    <string name="fail_auth">AuthFailed</string>
    <string name="success_sign_in">Sign In Success</string>
    <string name="fail_sign_in">Sign In Failed</string>
    <string name="dialogs">Dialogs</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="mute">Mute</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="reply">Reply</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="save">Сохранить</string>
    <string name="add_task">Добавить задачу…</string>
    <string name="remove">Удалить</string>
    <string name="edit">Редактировать</string>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="short_days_of_week">
        <item>Вс</item>
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
    </string-array>

    <string-array name="short_months">
        <item>янв</item>
        <item>фев</item>
        <item>мар</item>
        <item>апр</item>
        <item>май</item>
        <item>июн</item>
        <item>июл</item>
        <item>авг</item>
        <item>сен</item>
        <item>окт</item>
        <item>ноя</item>
        <item>дек</item>
    </string-array>

    <string-array name="notifications">
        <item>За 5 минут</item>
        <item>За 10 минут</item>
        <item>За 30 минут</item>
        <item>За час</item>
        <item>За 2 часа</item>
    </string-array>

    <string-array name="repeating">
        <item>Не повторяется</item>
        <item>Каждый день</item>
        <item>Каждую неделю</item>
        <item>Каждый месяц</item>
        <item>Каждый год</item>
    </string-array>

    <string name="task_label_red">Красный</string>
    <string name="task_label_pink">Розовый</string>
    <string name="task_label_orange">Оранжевый</string>
    <string name="task_label_yellow">Желтый</string>
    <string name="task_label_light_green">Светло-зеленый</string>
    <string name="task_label_green">Зеленый</string>
    <string name="task_label_light_blue">Светло-синий</string>
    <string name="task_label_blue">Синий</string>
    <string name="task_label_lilac">Сиреневый</string>
    <string name="task_label_violet">Фиолетовый</string>

    <string name="choose_student">Выбрать ученика</string>
    <string name="hint_add_title">Добавьте название</string>
    <string name="add_notification">Добавить уведомление</string>
    <string name="not_repeatable">Не повторяется</string>

    <string name="empty_title_error">Заголовок не может быть пуст</string>


</resources>
