<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_title_chat" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_nav_library"
        android:title="@string/nav_title_library" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_nav_schedule"
        android:title="@string/nav_title_schedule" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_nav_tasks"
        android:title="@string/nav_title_tasks" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_title_profile" />

</menu>
