<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/replyItem"
        android:title="@string/reply"
        android:icon="@drawable/ic_reply_arrow"
        app:showAsAction="always"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <item android:id="@+id/copyItem"
        android:title="@string/copy"
        android:icon="@drawable/ic_copy"
        app:showAsAction="always"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <item android:id="@+id/forwardItem"
        android:title="@string/forward"
        android:icon="@drawable/ic_forward_arrow"
        app:showAsAction="always"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <item android:id="@+id/deleteItem"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
</menu>