<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="0dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_back_arrow_moth" />
        </LinearLayout>

        <TextView
            android:id="@+id/calendarMonthText"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Октябрь, 2019" />

        <LinearLayout
            android:id="@+id/forwardButton"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_forward_arrow_month" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dayOfWeek_1_TextView"
            style="@style/CalendarDayNumberStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/monday" />

        <TextView
            android:id="@+id/dayOfWeek_2_TextView"
            style="@style/CalendarDayNumberStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tuesday" />

        <TextView
            android:id="@+id/dayOfWeek_3_TextView"
            style="@style/CalendarDayNumberStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wednesday" />

        <TextView
            android:id="@+id/dayOfWeek_4_TextView"
            style="@style/CalendarDayNumberStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/thursday" />

        <TextView
            android:id="@+id/dayOfWeek_5_TextView"
            style="@style/CalendarDayNumberStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/friday" />

        <TextView
            android:id="@+id/dayOfWeek_6_TextView"
            style="@style/CalendarDayNumberStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/saturday" />

        <TextView
            android:id="@+id/dayOfWeek_7_TextView"
            style="@style/CalendarDayNumberStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sunday" />
    </LinearLayout>
</LinearLayout>